objects/Batch_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Batch__c</fullName>
        <label>Batch</label>
        <referenceTo>Batch__c</referenceTo>
        <relationshipLabel>Batch Line Items</relationshipLabel>
        <relationshipName>Batch_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payload__c</fullName>
        <label>Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>npe01__OppPayment__c</referenceTo>
        <relationshipLabel>Batch Line Items</relationshipLabel>
        <relationshipName>Batch_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Batch Line Item</label>
    <nameField>
        <displayFormat>BLI-{0000000}</displayFormat>
        <label>Batch Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>